--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,56 +1,94 @@
 .task1 .item {
+  position: relative;
+  top: 150px;
+  left: 200px;
 }
 
 .task2 .item {
+  position: absolute;
+  top: calc(50% - 40px);
+  left: calc(50% - 40px);
 }
 
 .task3 .item {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .container4 {
+  position: absolute;
+  left: calc(50% - 40px);
 }
 
 .task4 {
   width: 1000px;
 }
 .task4 .item {
+  position: sticky;
 }
 
 .task5 .item1 {
   background-color: red;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 2;
 }
 .task5 .item2 {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  z-index: 1;
 }
 .task5 .item3 {
   background-color: green;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
 }
 
 .task6 .item {
+  float: left;
 }
 
 .task7 .item {
+  position: relative;
+  right: 0;
+  float: right;
 }
 
 .task8 .item1 {
+  float: none;
 }
 .task8 .item2 {
   height: 120px;
+  float: none;
 }
 
 .task8 p {
 }
 
 .task9 .item1 {
+  position: relative;
   height: 200px;
+  float: left;
 }
 .task9 .item2 {
+  position: relative;
+  left: 660px;
+  float: none;
 }
 .task9 p {
 }
 
 .task10 .item1 {
+  float: none;
 }
 .task10 .item2 {
+  position: relative;
+  float: right;
 }
 .task10 p {
 }
@@ -58,61 +96,83 @@
 .task11 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: contain;
 }
 
 .task12 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: cover;
 }
 
 .task13 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: fill;
 }
 
 .task14 .img-item {
   height: 100%;
   width: 100%;
+  object-fit: scale-down;
 }
 
 .task15 .img-item {
-  height: 100%;
-  width: 100%;
+  height: 200px;
+  width: 200px;
   object-fit: none;
+  position: absolute;
+  right: 0px;
+  top: calc(50% - 100px);
 }
 
 .task16 .img-item {
-  height: 100%;
-  width: 100%;
+  height: 200px;
+  width: 200px;
   object-fit: none;
+  top: 0;
+  left: 0;
 }
 
 .task17 .img-item {
-  height: 100%;
-  width: 100%;
+  height: 200px;
+  width: 200px;
   object-fit: none;
+  position: absolute;
+  bottom: 0;
+  left: calc(50% - 100px);
 }
 
 .task18 .img-item {
-  height: 100%;
-  width: 100%;
+  height: 200px;
+  width: 200px;
   object-fit: none;
+  position: relative;
+  top: 25px;
+  left: 40px;
 }
 
 .task19 .img-item {
-  height: 100%;
-  width: 100%;
+  height: 200px;
+  width: 200px;
   object-fit: none;
+  position: relative;
+  top: calc(50% - 100px);
+  left: calc(50% - 100px);
 }
 
 .task20 {
+  user-select: none;
 }
 
 .task21 {
+  user-select: all;
 }
 
 .task22 {
+  caret-color: blue;
 }
 
 html {
+  scroll-behavior: smooth;
 }
